cabal-version:      2.4
name:               emtl
version:            0.1.0.0
author:             amhsm6
maintainer:         amhsm6@gmail.com

library
    exposed-modules:  Control.Monad.List
                      Control.Monad.Maybe

    build-depends:    base ^>=4.16.4.0
                    , mtl

    hs-source-dirs:   src

    default-language: Haskell2010
